[project]
name = "ssh-artifact"
version = "0.1.0"
description = ""
authors = [
    {name = "daiyabarus",email = "daiyabarus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "polars (>=1.35.1,<2.0.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "branca (>=0.8.2,<0.9.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
